[gd_scene load_steps=2 format=3 uid="uid://s1iim5sxtjj1"]

[ext_resource type="Script" path="res://Scripts/UIManager.gd" id="1_t4jj6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_t4jj6")

[node name="Root3D" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Root3D"]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="Root3D/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Root3D/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.632922, 0.774216, 0, -0.774216, 0.632922, -0.627091, 16.9309, 11.8777)
current = true

[node name="RootControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="RootControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -332.0
offset_bottom = 213.0
grow_horizontal = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="Settings" type="VBoxContainer" parent="RootControl/MarginContainer"]
layout_mode = 2

[node name="Noise Layer Setting" type="HBoxContainer" parent="RootControl/MarginContainer/Settings"]
layout_mode = 2
tooltip_text = "Add Noise Layers to the planet"

[node name="Noise Layer Container" type="VBoxContainer" parent="RootControl/MarginContainer/Settings/Noise Layer Setting"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Affects how big the planet is"

[node name="Noise Layer" type="Label" parent="RootControl/MarginContainer/Settings/Noise Layer Setting/Noise Layer Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Noise Layer"
uppercase = true

[node name="Add Noise Layer Button" type="Button" parent="RootControl/MarginContainer/Settings/Noise Layer Setting"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Edit Noise Layer"

[node name="Seed Setting" type="HBoxContainer" parent="RootControl/MarginContainer/Settings"]
layout_mode = 2
tooltip_text = "Generates a different looking planet"

[node name="Seed Container" type="VBoxContainer" parent="RootControl/MarginContainer/Settings/Seed Setting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Seed" type="Label" parent="RootControl/MarginContainer/Settings/Seed Setting/Seed Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Seed"
uppercase = true

[node name="Seed Value" type="LineEdit" parent="RootControl/MarginContainer/Settings/Seed Setting"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Radius Setting" type="HBoxContainer" parent="RootControl/MarginContainer/Settings"]
layout_mode = 2
tooltip_text = "Affects how big the planet is"

[node name="Radius Container" type="VBoxContainer" parent="RootControl/MarginContainer/Settings/Radius Setting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Radius" type="Label" parent="RootControl/MarginContainer/Settings/Radius Setting/Radius Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Radius"
uppercase = true

[node name="Radius Value" type="SpinBox" parent="RootControl/MarginContainer/Settings/Radius Setting"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
value = 1.0

[node name="Subdivisions Setting" type="HBoxContainer" parent="RootControl/MarginContainer/Settings"]
layout_mode = 2
tooltip_text = "Affects how detailed the planet is"

[node name="Subdivisions Container" type="VBoxContainer" parent="RootControl/MarginContainer/Settings/Subdivisions Setting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Subdivisions" type="Label" parent="RootControl/MarginContainer/Settings/Subdivisions Setting/Subdivisions Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Subdivisions"
horizontal_alignment = 1
uppercase = true

[node name="Subdivisions Value" type="SpinBox" parent="RootControl/MarginContainer/Settings/Subdivisions Setting"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 6.0

[node name="GenerateBtnVBox" type="VBoxContainer" parent="RootControl/MarginContainer/Settings"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="Generate Button" type="Button" parent="RootControl/MarginContainer/Settings/GenerateBtnVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Generate"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PopupPanel" type="PopupPanel" parent="Control"]
initial_position = 1
size = Vector2i(500, 370)
visible = true
borderless = false
min_size = Vector2i(500, 0)

[node name="Control" type="Control" parent="Control/PopupPanel"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 366.0

[node name="MarginContainer" type="MarginContainer" parent="Control/PopupPanel/Control"]
layout_mode = 1
offset_right = 199.0
offset_bottom = 105.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PopupPanel/Control/MarginContainer"]
layout_mode = 2

[node name="Toggle Settings" type="Button" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "â–¶ Noise Settings"

[node name="Content" type="VBoxContainer" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Noise Type Setting" type="HBoxContainer" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Content"]
layout_mode = 2

[node name="Noise Type Container" type="VBoxContainer" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Content/Noise Type Setting"]
layout_mode = 2

[node name="Noise Type Label" type="Label" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Content/Noise Type Setting/Noise Type Container"]
layout_mode = 2
text = "Noise Type"

[node name="Noise Types" type="OptionButton" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Content/Noise Type Setting"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
fit_to_longest_item = false
item_count = 6
popup/item_0/text = "Simplex"
popup/item_1/text = "Simplex Smooth"
popup/item_1/id = 1
popup/item_2/text = "Cellular"
popup/item_2/id = 2
popup/item_3/text = "Perlin"
popup/item_3/id = 3
popup/item_4/text = "Value Cubic"
popup/item_4/id = 4
popup/item_5/text = "Value"
popup/item_5/id = 5

[node name="Scale Factor Setting" type="HBoxContainer" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Scale Factor Container" type="VBoxContainer" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Scale Factor Setting"]
layout_mode = 2

[node name="Scale Factor" type="Label" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Scale Factor Setting/Scale Factor Container"]
layout_mode = 2
text = "Scale Factor"

[node name="Scale Factor Value" type="SpinBox" parent="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Scale Factor Setting"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
step = 0.1
value = 1.0

[connection signal="pressed" from="RootControl/MarginContainer/Settings/Noise Layer Setting/Add Noise Layer Button" to="." method="_on_edit_noise_layer_button_pressed"]
[connection signal="value_changed" from="RootControl/MarginContainer/Settings/Radius Setting/Radius Value" to="." method="_on_radius_value_changed"]
[connection signal="value_changed" from="RootControl/MarginContainer/Settings/Subdivisions Setting/Subdivisions Value" to="." method="_on_subdivisions_value_changed"]
[connection signal="pressed" from="RootControl/MarginContainer/Settings/GenerateBtnVBox/Generate Button" to="." method="_generate_planet"]
[connection signal="pressed" from="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Toggle Settings" to="." method="_on_noise_settings_button_toggled"]
[connection signal="item_selected" from="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Content/Noise Type Setting/Noise Types" to="." method="_on_noise_types_item_selected"]
[connection signal="value_changed" from="Control/PopupPanel/Control/MarginContainer/VBoxContainer/Scale Factor Setting/Scale Factor Value" to="." method="_on_scale_factor_value_changed"]
